# ChangeLog for sys-apps/nawk
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/nawk/ChangeLog,v 1.4 2012/07/13 02:44:33 ottxor Exp $

*nawk-20110810-r1 (13 Jul 2012)

  13 Jul 2012; Christoph Junghans <ottxor@gentoo.org> -nawk-20110810.ebuild,
  +nawk-20110810-r1.ebuild:
  set nawk as awk if unset + ~amd64-linux

  06 Jul 2012; Christoph Junghans <ottxor@gentoo.org> nawk-20110810.ebuild:
  add ~x86-macos

  04 Jun 2012; Agostino Sarubbo <ago@gentoo.org> nawk-20110810.ebuild:
  Marked ~amd64, wrt to bug #419555

*nawk-20110810 (04 Jun 2012)

  04 Jun 2012; Christoph Junghans <ottxor@gentoo.org> +nawk-20110810.ebuild,
  +metadata.xml:
  initial commit
