@@ -2,17 +2,17 @@
 Hash: SHA256
 
 DIST nawk-20110810.tar.gz 108035 SHA256 48af177922700c313aa9d22100d230d2d0280d56b8598d80f583d57b44bf63a8 SHA512 8f2d8e288b2bf6dca0067c87de38eb833c0fea0ef2ef75a3180e79c0a554bb00037985de389b85c23b875c6e64261182f782fd70f6a1c64f6015af997090d972 WHIRLPOOL 4fc4d1dd620f5df7334d04aa2bf624244e6166d745ee52d04ec235d4935a2d72be1251f8bdc7bc1707a5988c254b1ed46407098a1dbaf011c1bc56821a730727
-EBUILD nawk-20110810-r1.ebuild 1029 SHA256 7084c44131cdb7ba25570fe0b950e8c2770550673269126f873d9e29eed41010 SHA512 d83c0caf64b9383522aefc6547c4beb911f5427baadfcbfcfb329457d492f88b349d02238a291109a94fb4f84fe816d1442b07d2451030cdbf35483faca79fa8 WHIRLPOOL 5c6d1f536c23423b21b5b692ec33aee96d64e25d54fbf3776a9adfd8fa83ed190631f0ba80bf6a0e694dd752ee0f4b840bac7574cf330e14483730b4e519b630
-MISC ChangeLog 724 SHA256 f5e1aa76094c4d80833fbce0e1de24dff9780b2820a8e880a74d2471277e7686 SHA512 76a2cc2b63bcdc9f0bb853418b64af5196d1dff6a0efd3dd915cf07bab9255b489d68bb1d7c22d64ae71bfc61bb7a5e9aec74aac3fa0bae628f13cb293688293 WHIRLPOOL 0a643fe7a762372d0446afcb2532106e46c702933674cd6ac5dfad0577271d46ab5090e38e6de481e4c2d92b712520c741f4a60d2b7f7e3d2e5ddd91f850f35f
+EBUILD nawk-20110810-r1.ebuild 1023 SHA256 c17eed75c34e740f4b0a4297552a9d1f7cd28b849a4eff3482aab9ffd92bdde8 SHA512 2e968f8e55ef0e62614449583ded636b94f156bedde8669d93a0406029b162849be7f8fd5d21fe7e37f3688b825a8f5cc8b2291a53201261f1fc434c40ed6f50 WHIRLPOOL 73246055498c28662f3b7dacd85a53b3289ed6bb50311188dc44be8b86b22f6184449a3fbe665f9de9faaaa7c1006f57220cdc09d5c144c052310a64b410eb7c
+MISC ChangeLog 817 SHA256 2f7da4d4202ed4581f8bf9359b7b1b1349872f21519325488766aeaa13bb0bbc SHA512 ec772a3dc6c90f7d0ebe582f7795a5694eae4879c338bcfa8221d33dcbedb9521d88c7a643e32251bb80198801f2765152ba36c1a7e2b9bac5496c8f02b16d14 WHIRLPOOL 4249a43e204470a3eefcbbd33961b1f9a6be8ab2ed697e9c1265ff7a73f6252d186f5832d5f7eb524502af8c76921322437c55ad80e358d2c37d68f500393b2a
 MISC metadata.xml 263 SHA256 a6d4c105d7146cdcbcf7d42ac9380a500a6e408268af602adf32fdeb0c114d48 SHA512 bd2a7f235f2a6a609fd441009487b1e1e4d1396b0805a8e704dc9e10d41b00927b5de5208dd9c5e9c935e8ccbee2f7a5b35ef994b4a9458602e36ee57044d4e3 WHIRLPOOL ac109b50cc474d20ea3bf3faf87ca3ac2c1faf582e1896d2e8e9dcc49a1a2c9ded234e50667b2e76dfce7cff0ad95380c69a56826ccf05d2b5394a6dbb325083
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJP/4uXAAoJEOeBhlrCAAWGQHwH/iDuFNVz8PdY4zfRnsspkiFN
-vIFEL67ItZxTmqEGmwlP0fCUKW7OM1BWZppy99uUNjVhnJHN2skpQm5K9N3XASz1
-d+NhW7rI5u2+kyTxrHYbia76CDxil1wfOUF6cRzFkQfCfMBjgWDpKQFLWTQi2JkS
-yX4CS1sYUpOfs5YnQCL7nMAupZG8FL14PSf5droCARNSB958exQSYPYFSv1YwtMA
-CY52c2lV0b05YCSqAlpPlueXUV1tFxvj1+g9gI9ePagX4p+i6qr1P+OhukWzeb63
-rJu1ULeTMgU7P5Yp97jjzVSFtHo5Tbg+74wnKvb5Lsw0zkrY8OAxAjvQbSrfEeU=
-=Y8yU
+iQEcBAEBCAAGBQJP/401AAoJEOeBhlrCAAWGWGUIAKxXre6fy0grZm5qKlL0w7/Z
+TaH/2mipFa5Yyg3bF+wGwmvtBFvrY2rx8jYW5AK8WSz5u/PKyEZpchEsfh6ndGz6
+wDbDPmkickXkgCC/yvut2hYo2/XSETgmz9uZMgEW4+rstzV95qP0pzRPR8gNucAl
+D3GBr7Br9m4KuxOaczOvlYfmx1IdiTcrlJeacy0l8Ug4zOBdc157eIp9ptLQQzHx
+l5FXnnBUls5siHKC08cdver7il/Khud3/7KF6w2nOLqQDBFIwe9GI4q2Ww726aEL
+xjinwofeg8jgsP5A3JO+pgx0MBeE+PuCTZpKJLz9qwWAOb8Z/AWr3uVNLUh08/g=
+=lGKx
 -----END PGP SIGNATURE-----
